# NAAMSE

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  langgraph.json  main.py  pyproject.toml  test.py  test_behavioral_subgraph.py  workflow_graphs.md
.github/workflows/: publish-agents.yml
behavior_engine_tests/: behavioral_subgraph_test_false_positives.csv  test_behavioral_subgraph.py  test_false_positive.py
docs/: hardware_requirements.md  schema.sql  scoring.md
results/: README.md
results/gemini/: adv_mutations_all_184.json  adv_mutations_all_67.json  adv_mutations_all_69.json  adv_mutations_all_75687.json  adv_mutations_only_3179.json  adv_mutations_only_67.json  adv_mutations_only_69.json  adv_mutations_only_75687.json  adv_mutations_sim_75687.json
results/glm4.7/: final_report_adversarial_glm4.7_seed5306016632.json  final_report_benign_glm4.7_seed5306016632.json
results/glm5/: final_report_glm5_seed5306016632.json
results/gpt-oss-120b/: final_report_adversarial_gptoss-120b.json  final_report_benign_gptoss-120b.json
results/gpt-oss-20b/: final_report_gptoss-20b_seed_5306016632.json
results/kimi-k2-instruct-0905/: assessment_report_kimi_k2_instruct_0905_seed_4547331533.json
results/llama-3.1-405b-instruct/: final_report_adversarial_llama-3.1-405b-instruct.json  final_report_benign_llama-3.1-405b-instruct.json
results/llama-4-maverick-17b-128e-instruct/: final_report_llama-4-maverick-17b-128e-instruct_seed_5306016632.json  final_report_llama-4-maverick-17b-128e-instruct_seed_75687.json
results/llama-4-scout-17b-16e-instruct/: final_report_llama-4-scout-17b-16e-instruct_seed_75687.json
results/mistral-7b/: assessment_report_mistral_7b_10itr_8mut_seed_75687.json
results/mixtral-8x22b-instruct-v0.1/: assessment_report_mixtral_8x22b_instruct_v0.1_seed_4547331533.json
results/nemotron-3-nano-30b-a3b/: final_report_nemotron-3-nano-30b-a3b_seed_75687.json
results/nvidia-nemotron-9b/: assessment_report_nemotron_9b_10itr_8mut_seed_75687.json
results/phi-2/: final_report_phi_75687.json
results/phi4-mini/: assessment_report_phi4_mini_seed_5306016632.json
results/qwen3-4b/: assessment_report_qwen3_4b_10itr_8mut_seed_75687.json
results/qwen3-coder-480b-a35b-instruct/: final_report_qwen3-coder-480b-a35b-instruct_seed_75687.json
scenarios/naamse/: Dockerfile.naamse-green-agent  (+2 more)
scripts/: cleanup_database.py
src/: config.py
util/: a2a_agent.py  generate_pdf_report.py  huggingface_agent.py  nvidia_a2a_agent.py  nvidia_multimodal_a2a_agent.py  ollama_agent.py  phi3_agent.py
(+119 files in other folders)
