[project]
name = "agent"
version = "0.0.1"
description = "Starter template for making a new agent LangGraph."
authors = [
    { name = "Parth Shah", email = "helloparthshah+naamse@gmail.com" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "langgraph>=1.0.0",
    "python-dotenv>=1.0.1",
    "datasets>=2.0.0",
    "huggingface-hub>=0.20.0",
    "pydriller>=2.0.0",
    "scikit-learn>=1.7.2",
    "optuna>=4.5.0",
    "torch>=2.9.0",
    "sentence-transformers>=3.3.1",
    "transformers>=4.34.0,<5.0.0",
    "langchain-google-genai>=3.0.1",
    "deep-translator>=1.11.4",
    "charset-normalizer>=3.4.4",
    "ftfy>=6.3.1",
    "unidecode>=1.4.0",
    "langchain-ollama>=1.0.0",
    "langchain-core>=1.0.2",
    "langchain-community>=0.4.1",
    "pydantic>=2.12.3",
    "langchain[agents]>=1.0.5",
    "presidio-analyzer>=2.2.0",
    "spacy>=3.7.0",
    "en-core-web-sm",
    "python-a2a>=0.5.10",
    "a2a-sdk>=0.3.16",
    "google-genai>=1.52.0",
    "art>=6.0",
    "nltk>=3.9.2",
    "agentbeats>=0.1.1",
    "langchain-huggingface>=1.0.1",
    "torchvision>=0.24.1",
    "torchaudio>=2.9.1",
    "matplotlib>=3.10.8",
    "reportlab>=4.4.7",
]


[project.optional-dependencies]
dev = ["mypy>=1.11.1", "ruff>=0.6.1"]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src", "agent", "langgraph.templates.agent"]
[tool.setuptools.package-dir]
"src" = "src"
"agent" = "src/agent"
"langgraph.templates.agent" = "src/agent"


[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    # We actually do want to import from typing_extensions
    "UP035",
    # Relax the convention by _not_ requiring documentation for every function parameter.
    "D417",
    "E501",
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }

[dependency-groups]
dev = [
    "anyio>=4.7.0",
    "langgraph-cli[inmem]>=0.2.8",
    "mypy>=1.13.0",
    "pytest>=8.3.5",
    "ruff>=0.8.2",
]
